venezuela/staging/database/mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-venezuela-deployment-staging
  namespace: venezuela
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mariadb-venezuela-staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb-venezuela-staging
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-venezuela-storage-staging
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-venezuela-storage-staging
          persistentVolumeClaim:
            claimName: mariadb-venezuela-pvc-staging
