venezuela/staging/database/phpmyadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-venezuela-deployment-staging
  namespace: venezuela
spec:
  selector:
    matchLabels:
      app: phpmyadmin-venezuela-staging
  template:
    metadata:
      labels:
        app: phpmyadmin-venezuela-staging
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
              name: phpmyadmin
