venezuela/staging/database/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-venezuela-staging
  namespace: venezuela
spec:
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 32088
  selector:
    app: mariadb-venezuela-staging
