venezuela/staging/database/phpmyadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-venezuela-staging
  namespace: venezuela
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: phpmyadmin-venezuela-staging
  type: LoadBalancer
